--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
+    "node": "^12.4.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
@@ -18,8 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server":"nodemon ./pg-api/server.js"
-    
+    "server": "nodemon ./pg-api/server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
