--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.17.1",
-    "node": "^12.4.0",
-  
+    "node": "^12.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
